--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,151 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Home</title>
+	<title>Flowers</title>
 	<!-- Latest compiled and minified CSS & JS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="./css/styles.css" media="screen" title="no title">
 	<script src="https://code.jquery.com/jquery.js"></script>
+	<!-- Latest compiled JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
+<!--nav bar-->
+
+<nav class="navbar navbar-default navbar-inverse" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Flowers</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Donate</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Go Somwhere</a></li>
+            <li><a href="#">Do Something</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">link</a></li>
+            <li class="divider"></li>
+            <li><a href="#">another link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><p class="navbar-text">Already have an account?</p></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+			<ul id="login-dp" class="dropdown-menu">
+				<li>
+					 <div class="row">
+							<div class="col-md-12">
+								Login via
+								<div class="social-buttons">
+									<a href="#" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
+									<a href="#" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
+								</div>
+                                or
+								 <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+										<div class="form-group">
+											 <label class="sr-only" for="exampleInputEmail2">Email address</label>
+											 <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+										</div>
+										<div class="form-group">
+											 <label class="sr-only" for="exampleInputPassword2">Password</label>
+											 <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+                                             <div class="help-block text-right"><a href="">Forget the password ?</a></div>
+										</div>
+										<div class="form-group">
+											 <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+										</div>
+										<div class="checkbox">
+											 <label>
+											 <input type="checkbox"> keep me logged-in
+											 </label>
+										</div>
+								 </form>
+							</div>
+							<div class="bottom text-center">
+								New here ? <a href="#"><b>Join Us</b></a>
+							</div>
+					 </div>
+				</li>
+			</ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+
+	<!-- JUMBO -->
+  <div class="container">
+    <div class="jumbotron">
+      <div class="row">
+        <h1 class="animated pulse"><a href="index.html">Philanthropic Florists</a></h1>
+        <p>Help us by helping others! Dontate flowers today.</p>
+      </div>
+    </div>
+  </div>
+   <!--MAIN-->
+  <div class="container">
+      <div class="row">
+       
+        <div class="col-sm-4">
+          <h3>Flowers</h3>
+          <!-- <button id="products" class="catButt"><span class="glyphicon glyphicon-tag" aria-hidden="true"></span></button> -->
+          <a href="categories.html" class="catButt glyphicon glyphicon-tag" aria-hidden="true" role="button" id="products"></a>
+        </div>
+      </div>
+    </div>
+	
+	<!-- FOOTER -->
+  <footer class="footer" id="footer">
+    <div class="container social-links"> 
+        <a href="https://www.facebook.com" class="ico-anim social-facebook" title="Facebook" target="_blank"></a>
+        <span class="icon-facebook">
+          <picture>
+            <source srcset="./assets/images/facebook.png" media="(min-width: 600px)">
+            <img src="./assets/images/facebook.png"" alt="Facebook">
+          </picture>
+        </span>
+        <a href="https://www.instagram.com" class="ico-anim social-instagam" title="Instagram" target="_blank"></a>
+        <span class="icon-instagram">
+          <picture>
+            <source srcset="./assets/images/instagram.png" media="(min-width: 600px)">
+            <img src="./assets/images/instagram.png"" alt="instagram">
+          </picture>
+        </span>
+        <a href="https://www.twitter.com" class="ico-anim social-twitter" title="Twitter" target="_blank"></a>
+        <span class="icon-facebook">
+          <picture>
+            <source srcset="./assets/images/twitter.png" media="(min-width: 600px)">
+            <img src="./assets/images/twitter.png"" alt="twitter">
+          </picture>
+        </span>
+      <p class="text-muted">Copyright &copy; 2017 Team Philanthropic Florists Inc.</p>
+    </div>
+  </footer>
+
 
 </body>
 </html>
